--- a/style.css
+++ b/style.css
@@ -1,15 +1,72 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
+  font-family: sans-serif;
 }
 
 img {
   max-width: 100%;
 }
 
-.container {
+h1 {
+  width:90%;
+  margin: 0 auto;
+}
+#page {
   display: flex;
-  max-width: 800px;
-  background-color: blue;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: 0 auto;
+  /* background-color: lightblue; */
+}
+
+.profile {
+  display: flex;
+  flex-wrap: wrap;
+  width: 25%;
+  min-width: 250px;
+  justify-content: center;
+  text-align: center;
+  padding: 10px;
+  overflow-wrap: break-word;
+}
+
+.profilePic {
+  width: 60%;
+  margin: 0;
+  min-width: 100px;
+  border-radius: 80px;
+  padding: 15px;
+  /* -webkit-transform: skew(25deg) */
+}
+.name {
+  width: 100%;
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+.email {
+  width: 100%;
+  font-size: 12px;
+  color: gray;
+  margin: 5px;
+}
+
+.location {
+  width: 100%;
+  font-size: 13px;
+  text-transform: capitalize;
+}
+
+.birthday {
+  width: 100%;
+  font-size: 13px;
+  margin-top: 5px;
+}
+
+.registered {
+  width: 100%;
+  font-size: 13px;
 }
